--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Get a full fake REST API with zero coding in less than 30 seconds",
   "main": "./lib/server/index.js",
   "bin": "./lib/cli/bin.js",
+  "types": "./index.d.ts",
   "files": [
     "lib",
     "public"
